--- a/css/pricing.css
+++ b/css/pricing.css
@@ -21,7 +21,7 @@
 .pricing__title {
     color: var(--title-color);
     font-family: "Poppins", sans-serif;
-    font-size: 0,75 rem;
+    font-size: 0.75rem;
     font-weight: bold;
   
 }
@@ -46,13 +46,14 @@
 .pricing__schedule {
     display: flex;
     justify-content:left;
+    align-items: end;
     margin-top: 20px;
 }
 
 .pricing__day {
     color: var(--subtext-color);
     font-family: "Poppins", sans-serif;
-    font-size: 1 rem;
+    font-size: 1rem;
     font-weight: bold;
 }
 
@@ -67,7 +68,7 @@
 .pricing__time {
     color: var(--time-color);
     font-family: "Poppins", sans-serif;
-    font-size: 1 rem;
+    font-size: 1rem;
 }
 
 .pricing__time p:nth-child(-n+2) {
@@ -93,18 +94,20 @@
 .pricing__plan-title {
     color: var(--plan-title-color);
     font-family: "Signika", sans-serif;
-    font-size: 1,5rem;
+    font-size: 1.5rem;
     margin-top: 25px;
 }
 
 ul.pricing__features {
     list-style: none;
     padding-left: 0;
+    height: 176px;
+    width: 290px;
 }
 
 ul.pricing__features li {
     padding-left: 24px;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
     position: relative;
 }
 
@@ -175,7 +178,7 @@ ul li {
     background-color: var(--bn-select-color);
     border: 1px solid black;
     border-radius: 5px;
-    font-size: 0,675rem;   
+    font-size: 0.675rem;   
     font-family: "Poppins", sans-serif;
     color: var(--button-text-color);
     text-decoration: none;
@@ -184,8 +187,10 @@ ul li {
     padding: 16px 24px;
     margin: 10px;
     cursor: pointer;
+    width: 140px;
+    height: 42px;
 }
 
 .pricing__select-bn-content {
-    padding-right: 32px;
+    padding-right: 20px;
 }
