--- a/css/common.css
+++ b/css/common.css
@@ -13,13 +13,14 @@
     --bn-select-color: #235565;
     --select-border-color: #647A81;
     --select-visited-color: #519ac9;
-    --select-hover-color: #235565;
+    --select-hover-color: #519ac9;
     --select-active-color: #235565;
     --subtext-color: #235565;
     --crossmark-color: #6f6f72;
     --button-text-color: #fff;
     --svg-bg-color: #235565;
     --svg-arrow-color: #fff;
+    --svg-bn-hover: #235565;
     --details-card-bg-color: #f8fafb;
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
