--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,6 @@
 @import "footer.scss";
 @import "pricing.css";
 @import "faq.css";
-
+@import "contacts.css";
 
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
