--- a/css/style.scss
+++ b/css/style.scss
@@ -7,5 +7,5 @@
 @import "pricing.css";
 @import "faq.css";
 @import "contacts.css";
-@import "../care.css";
+@import "care.css";
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
