--- a/css/care.css
+++ b/css/care.css
@@ -8,15 +8,15 @@
     font-family: Arial, Helvetica, sans-serif;
     filter: saturate(130%);
 }
-h1 {
+.main-title {
     font-size: 12px;
     opacity: 0.3;
     padding-bottom: 5px;
 }
-h2 {
+.sub-title {
     letter-spacing: 3px;
 }
-h2, p {
+.sub-title, .emergency-text {
    color: rgb(255, 255, 255); 
 
 }
