--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@
 @import "../css/header";
 @import "../css/discoveries";
 @import "../css/why-us.scss";
-@import "footer.scss";
+@import "./footer.scss";
 @import "pricing.css";
 @import "faq.css";
 @import "contacts.css";
