--- a/css/footer.scss
+++ b/css/footer.scss
@@ -1,15 +1,132 @@
 .footer {
-  background-color: aqua;
+  &__wrap-img {
+    height: 100px;
+
+    img {
+      object-fit: cover;
+      height: 100%;
+    }
+  }
+
+  &__wrap {
+    background-color: var(--footer-bg);
+    padding-bottom: 20px;
+  }
+
+  &__container {
+    max-width: 1200px;
+    margin: auto;
+    padding: 0 15px;
+  }
+
+  &__row {
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width:600px) {
+      flex-direction: column;
+    }
+  }
+
+  &__logo{
+    width: 189px;
+    height: 55px;
+
+    @media (max-width:600px) {
+      margin: auto;
+    }
+  }
+
   &__nav {
     display: flex;
+    margin-top: 30px;
 
     &-item {
       display: inline-block;
-      margin-right: 5px;
+      margin-right: 10px;
+      color: var(--footer-links);
+      transition: color .3s;
 
       &:last-child {
         margin-right: 0;
       }
+      &:hover {
+        color: var(--footer-links-active);
+      }
+
+      @media (max-width:600px) {
+        margin-bottom: 20px;
+      }
+    }
+
+    @media (max-width:600px) {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  &__follow {
+    h3{
+      color: var(--footer-text);
+      font-weight: bold;
+      font-size: 18px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    nav {
+      a {
+        display: inline-block;
+        margin: 0 5px;
+        svg {
+          fill: var(--footer-icon);
+          transition: fill .3s;
+        }
+        &:hover {
+          svg {
+            fill: var(--footer-icon-active);
+          }
+        }
+      }
+    }
+
+    @media (max-width:600px) {
+      h3 {
+        margin-bottom: 0;
+        margin-right: 10px;
+      }
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 50px;
+    }
+  }
+
+  .copy {
+    margin-top: 50px;
+
+    @media (max-width:600px) {
+      text-align: center;
+    }
+  }
+
+  &__copyright {
+   color: var(--footer-links);
+   font-size: 12px;
+
+    @media (max-width:600px) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__welcome {
+    color: var(--footer-links);
+    font-size: 12px;
+
+    span {
+      color: var(--footer-icon);
+      font-weight: 600;
     }
   }
 }
