--- a/css/care.css
+++ b/css/care.css
@@ -7,6 +7,8 @@
     padding: 100px;
     font-family: Arial, Helvetica, sans-serif;
     filter: saturate(130%);
+    margin-right: 50px;
+    margin-left: 50px;
 }
 .main-title {
     font-size: 12px;
@@ -14,7 +16,7 @@
     padding-bottom: 5px;
 }
 .sub-title {
-    letter-spacing: 3px;
+    letter-spacing: 5px;
 }
 .sub-title, .emergency-text {
    color: rgb(255, 255, 255); 
