--- a/css/care.css
+++ b/css/care.css
@@ -1,14 +1,14 @@
 .care {
     text-align: center;
     background-image: url("../img/IMG_1136.JPG");
-    margin-top: 100px;
-    line-height: 1.5;
+    margin: 200px;
+    line-height: 1.8;
     background-size: cover;
     padding: 100px;
     font-family: Arial, Helvetica, sans-serif;
     filter: saturate(130%);
-    margin-right: 50px;
-    margin-left: 50px;
+    margin-right: 100px;
+    margin-left: 100px;
 }
 .main-title {
     font-size: 12px;
@@ -17,6 +17,7 @@
 }
 .sub-title {
     letter-spacing: 5px;
+    font-size: 30px;
 }
 .sub-title, .emergency-text {
    color: rgb(255, 255, 255); 
