--- a/css/style.css
+++ b/css/style.css
@@ -162,8 +162,9 @@ h6 {
 .discoveries__brain-wrapper {
   display: grid;
   justify-content: center;
-  grid-template-columns: minmax(350px, 800px);
+  max-width: 800px;
   justify-items: center;
+  margin: auto;
 }
 .discoveries__brain-wrapper .discoveries__title {
   font-size: 48px;
