@import "car.with.animal.css";

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,4 +8,5 @@
 @import "faq.css";
 @import "contacts.css";
 @import "care.css";
+@import "car.with.animal.css";
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
