--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@
 @import "../css/header";
 @import "../css/discoveries";
 @import "../css/why-us.scss";
+@import "service-carousel.css"
 @import "./footer.scss";
 @import "pricing.css";
 @import "faq.css";
