import of service-carousel

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 /*Обнуление*/
 @import "common.css";
 @import "pricing.css";
+@import "service-carousel.css"
 @import "faq.css";
 @import "contacts.css";
 @import "care.css";
