--- a/css/style.css
+++ b/css/style.css
@@ -269,20 +269,22 @@ h1 {
   }
 }
 /* Banner CSS */
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .banner {
-    text-align: left;
-  }
-  .banner__paragraph,
-  .banner__secondblock--heading,
-  .banner__secondblock--secondparagraph {
-    font-size: 16px; 
+      flex-direction: column;
+      text-align: left;
   }
 
-  .button__banner--pagedown,
-  .button__banner--tel {
-    width: 100%; 
-    margin-bottom: 10px; 
+  .banner__text {
+      width: 100%;
+      order: 2;
+      margin-top: 20px;
+  }
+
+  .banner__img {
+      width: 100%;
+      max-width: 100%;
+      height: auto;
   }
 }
 .banner__secondblock--heading{
@@ -294,11 +296,26 @@ h1 {
   color: #647A81;
   font-size:18px;
   font-family: Poppins;
+  margin-bottom: 20px;
 }
 .banner__paragraph{
   color: #519AC9;
   font-size: 12px;
   font-family: Poppins;
+}
+.banner {
+  width: 100%;
+  height: 870px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-image: url("https://res2.weblium.site/res/5f66341807730000225f82ac/5f69efd3c0c73d0021df2614");
+  background-size: cover;
+  background-position: center;
+}
+.banner__text{
+  width: 50%;
+  padding: 20px;
 }
 /*--------------------*/
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
