--- a/css/common.css
+++ b/css/common.css
@@ -36,6 +36,12 @@ body {
     justify-content: center;
 }
 
+.container {
+    max-width: 1200px;
+    padding: 0 24px;
+    margin: auto;
+}
+
 img {
     width: 100%;
     display: block;
