--- a/css/style.css
+++ b/css/style.css
@@ -1,397 +1,17 @@
-@charset "UTF-8";
-/*Обнуление*/
-@import "common.css";
-@import "pricing.css";
-@import "service-carousel.css"
-@import "faq.css";
-@import "contacts.css";
-@import "care.css";
-@import "car.with.animal.css";
-@import "banner.css";
+/* Error: expected ";".
+ *   ,
+ * 6 | @import "service-carousel.css"
+ *   |                               ^
+ *   '
+ *   style.scss 6:31  root stylesheet */
 
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-
-*,
-*:before,
-*:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-:focus,
-:active {
-  outline: none;
-}
-
-a:focus,
-a:active {
-  outline: none;
-}
-
-nav,
-footer,
-header,
-aside {
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected ";".\a   \2577 \a 6 \2502  @import "service-carousel.css"\d\a   \2502                                ^\a   \2575 \a   style.scss 6:31  root stylesheet';
 }
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
-  font-size: 15px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-input,
-button,
-textarea {
-  font-family: inherit;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-button {
-  cursor: pointer;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-a,
-a:visited {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-ul li {
-  list-style: none;
-}
-
-img {
-  vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: inherit;
-  font-weight: inherit;
-}
-
-/*--------------------*/
-.header {
-  display: flex;
-  justify-content: center;
-}
-.header .header__container {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
-.header .header__logo {
-  background-image: url("../img/header_logo.webp");
-  background-size: cover;
-  margin-bottom: 10px;
-  width: 140px;
-  height: 35px;
-}
-.header .header__social {
-  display: flex;
-  justify-content: center;
-}
-.header .header__social .header__social-item-container {
-  display: flex;
-  margin: 10px 10px 10px 10px;
-  background: white;
-  width: 20px;
-  height: 20px;
-  border-radius: 8px;
-}
-.header .header__social .header__img {
-  width: 20px;
-  height: 20px;
-}
-
-@media (min-width: 990px) {
-  .header .header__container {
-    padding: 30px 0 30px 0;
-    flex-direction: row;
-    flex: 0 1 1200px;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .header .header__container .header__logo {
-    width: 198px;
-    height: 58px;
-  }
-  .header .header__nav {
-    display: flex;
-    font-weight: bold;
-  }
-  .header .header__nav .header__nav-item {
-    padding: 0 20px 0 20px;
-  }
-  .header .header__social .header__social-item-container {
-    padding: 5px;
-  }
-}
-@media (max-width: 989px) {
-  .header__nav {
-    padding: 10px 0 10px 0;
-  }
-  .header__nav .header__nav-item {
-    padding: 5px 0 5px 0;
-  }
-}
-.discoveries__brain-wrapper {
-  display: grid;
-  justify-content: center;
-  max-width: 800px;
-  justify-items: center;
-  margin: auto;
-}
-.discoveries__brain-wrapper .discoveries__title {
-  font-size: 48px;
-  font-weight: bold;
-  text-align: center;
-}
-.discoveries__brain-wrapper .discoveries__subtitle {
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  padding-top: 20px;
-}
-.discoveries__brain-wrapper .discoveries__brain-container--first {
-  grid-template: 425px/minmax(300px, 600px);
-}
-.discoveries__brain-wrapper .discoveries__brain-container--second {
-  grid-template: 500px/minmax(300px, 450px);
-}
-.discoveries__brain-wrapper .discoveries__brain-container {
-  display: grid;
-  padding: 20px 0 20px 0;
-  justify-items: center;
-  justify-self: center;
-}
-.discoveries__brain-wrapper .discoveries__brain-container .discoveries__brain-img {
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: auto;
-}
-.discoveries__brain-wrapper .discoveries__brain-container .discoveries__brain-img--first {
-  background-image: url("../img/ratbrain1.webp");
-}
-.discoveries__brain-wrapper .discoveries__brain-container .discoveries__brain-text {
-  text-align: center;
-}
-.discoveries__brain-wrapper .discoveries__text {
-  display: grid;
-  font-size: 17px;
-}
-.discoveries__brain-wrapper .discoveries__text > p {
-  margin-bottom: 15px;
-  line-height: 25px;
-}
-.discoveries__brain-wrapper .discoveries__text .discoveries__brain-img--second {
-  background-image: url("../img/ratbrain2.png");
-}
-
-h1 {
-  margin: 0;
-  padding: 0;
-}
-
-.why-choose-us {
-  text-align: center;
-}
-
-.why-choose-us h2 {
-  width: auto;
-  height: auto;
-  font-weight: bold;
-}
-
-.why-choose-us__items {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  justify-content: center;
-}
-
-.why-choose-us__item {
-  text-align: left;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.why-choose-us__item img {
-  color: rgb(36, 45, 49);
-  width: 100px;
-  height: auto;
-}
-
-.why-choose-us__item h3 {
-  margin-top: 10px;
-}
-
-.why-choose-us__item p {
-  color: gray;
-  max-width: 100%;
-  word-wrap: break-word;
-  text-align: center;
-}
-
-@media only screen and (max-width: 768px) {
-  .why-choose-us__items {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media only screen and (max-width: 480px) {
-  .why-choose-us__items {
-    grid-template-columns: 1fr;
-  }
-}
-.footer__wrap-img {
-  height: 100px;
-}
-.footer__wrap-img img {
-  object-fit: cover;
-  height: 100%;
-}
-.footer__wrap {
-  background-color: var(--footer-bg);
-  padding-bottom: 20px;
-}
-.footer__container {
-  max-width: 1200px;
-  margin: auto;
-  padding: 0 15px;
-}
-.footer__row {
-  display: flex;
-  justify-content: space-between;
-}
-@media (max-width: 600px) {
-  .footer__row {
-    flex-direction: column;
-  }
-}
-.footer__logo {
-  width: 189px;
-  height: 55px;
-}
-@media (max-width: 600px) {
-  .footer__logo {
-    margin: auto;
-  }
-}
-.footer__nav {
-  display: flex;
-  margin-top: 30px;
-}
-.footer__nav-item {
-  display: inline-block;
-  margin-right: 10px;
-  color: var(--footer-links);
-  transition: color 0.3s;
-}
-.footer__nav-item:last-child {
-  margin-right: 0;
-}
-.footer__nav-item:hover {
-  color: var(--footer-links-active);
-}
-@media (max-width: 600px) {
-  .footer__nav-item {
-    margin-bottom: 20px;
-  }
-}
-@media (max-width: 600px) {
-  .footer__nav {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-.footer__follow h3 {
-  color: var(--footer-text);
-  font-weight: bold;
-  font-size: 18px;
-  text-align: center;
-  margin-bottom: 20px;
-}
-.footer__follow nav a {
-  display: inline-block;
-  margin: 0 5px;
-}
-.footer__follow nav a svg {
-  fill: var(--footer-icon);
-  transition: fill 0.3s;
-}
-.footer__follow nav a:hover svg {
-  fill: var(--footer-icon-active);
-}
-@media (max-width: 600px) {
-  .footer__follow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-  }
-  .footer__follow h3 {
-    margin-bottom: 0;
-    margin-right: 10px;
-  }
-}
-.footer .copy {
-  margin-top: 50px;
-}
-@media (max-width: 600px) {
-  .footer .copy {
-    text-align: center;
-  }
-}
-.footer__copyright {
-  color: var(--footer-links);
-  font-size: 12px;
-}
-@media (max-width: 600px) {
-  .footer__copyright {
-    margin-bottom: 20px;
-  }
-}
-.footer__welcome {
-  color: var(--footer-links);
-  font-size: 12px;
-}
-.footer__welcome span {
-  color: var(--footer-icon);
-  font-weight: 600;
-}
-
-/*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
-
-/*# sourceMappingURL=style.css.map */
