--- a/css/pricing.css
+++ b/css/pricing.css
@@ -4,6 +4,7 @@
     margin: auto;
     max-width: 1200px;
     padding: 60px 0 50px 0;
+    position: relative;
 }
 
 .pricing__content {
@@ -49,7 +50,6 @@
     display: flex;
     flex-direction: column;
     justify-content:space-evenly;
-    align-items: end;
     margin-top: 20px;
 }
 
@@ -153,17 +153,37 @@ ul li {
     background-color: var(--crossmark-color);
 }
 
-.arrow-svg {
+.arrow-svg-left {
     transform: rotateY(180deg);
+    width: 100%;
+    height: 100%;
 }
 
-.pricing__arrow {
-    height: 32px;
-    width: 32px;
+.arrow-svg-right {
+    width: 100%;
+    height: 100%;
+}
+
+.pricing__arrow-left, .pricing__arrow-right {
+    height: 24px;
+    width: 24px;
+    padding: 5px;
     border-radius: 50%;
     fill: var(--svg-arrow-color);
     background-color: var(--svg-bg-color);
     margin-top: 170px;
+}
+.pricing__arrow-left {
+    position:absolute;
+    left: 52px;
+    top: calc(50% - 487px);
+}
+    
+
+.pricing__arrow-right {
+    position:absolute;
+    left: 52px;
+    top: calc(50% - 487px);
 }
 
 .pricing__details {
