--- a/css/pricing.css
+++ b/css/pricing.css
@@ -4,6 +4,7 @@
     margin: auto;
     max-width: 1200px;
     padding: 60px 0 50px 0;
+    position: relative;
 }
 
 .pricing__content {
@@ -17,14 +18,16 @@
     margin: 0 15px;
     box-sizing: border-box;
     padding: 0 24px 0;
-    border: 1px solid black; /*later to do border none*/
+    border: 1px solid black;
+    /*later to do border none*/
 }
+
 .pricing__title {
     color: var(--title-color);
     font-family: "Poppins", sans-serif;
     font-size: 0.75rem;
     font-weight: bold;
-  
+
 }
 
 .pricing__subtitle {
@@ -48,8 +51,7 @@
 .pricing__schedule {
     display: flex;
     flex-direction: column;
-    justify-content:space-evenly;
-    align-items: end;
+    justify-content: space-evenly;
     margin-top: 20px;
 }
 
@@ -118,7 +120,7 @@ ul.pricing__features {
 }
 
 ul.pricing__features li {
-    padding-left: 24px;
+    padding-left: 36px;
     margin-bottom: 16px;
     position: relative;
 }
@@ -127,7 +129,9 @@ ul.pricing__features li::before {
     content: "";
     position: absolute;
     left: 0;
-    top: 50% /*6px*/;
+    top: 50%
+        /*6px*/
+    ;
     width: 20px;
     height: 20px;
     transform: translateY(-50%);
@@ -148,22 +152,35 @@ ul li {
 }
 
 .pricing__features-crossmark::before {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 1000 1000' style='enable-background: new 0 0 1000 1000; max-width: 100%25' xml:space='preserve' height='100%25'%3E%3Cpath d='M620.4,500l177.4-177.4c33.1-33.1,33.1-87.3,0-120.4l0,0c-33.1-33.1-87.3-33.1-120.4,0L500,379.6L322.6,202.2 c-33.1-33.1-87.3-33.1-120.4,0l0,0c-33.1,33.1-33.1,87.3,0,120.4L379.6,500L202.2,677.4c-33.1,33.1-33.1,87.3,0,120.4l0,0 c33.1,33.1,87.3,33.1,120.4,0L500,620.4l177.4,177.4c33.1,33.1,87.3,33.1,120.4,0l0,0c33.1-33.1,33.1-87.3,0-120.4L620.4,500z' fill='currentColor'%3E%3C/path%3E%3C/svg%3E") cover; 
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 1000 1000' style='enable-background: new 0 0 1000 1000; max-width: 100%25' xml:space='preserve' height='100%25'%3E%3Cpath d='M620.4,500l177.4-177.4c33.1-33.1,33.1-87.3,0-120.4l0,0c-33.1-33.1-87.3-33.1-120.4,0L500,379.6L322.6,202.2 c-33.1-33.1-87.3-33.1-120.4,0l0,0c-33.1,33.1-33.1,87.3,0,120.4L379.6,500L202.2,677.4c-33.1,33.1-33.1,87.3,0,120.4l0,0 c33.1,33.1,87.3,33.1,120.4,0L500,620.4l177.4,177.4c33.1,33.1,87.3,33.1,120.4,0l0,0c33.1-33.1,33.1-87.3,0-120.4L620.4,500z' fill='currentColor'%3E%3C/path%3E%3C/svg%3E") cover;
     mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 1000 1000' style='enable-background: new 0 0 1000 1000; max-width: 100%25' xml:space='preserve' height='100%25'%3E%3Cpath d='M620.4,500l177.4-177.4c33.1-33.1,33.1-87.3,0-120.4l0,0c-33.1-33.1-87.3-33.1-120.4,0L500,379.6L322.6,202.2 c-33.1-33.1-87.3-33.1-120.4,0l0,0c-33.1,33.1-33.1,87.3,0,120.4L379.6,500L202.2,677.4c-33.1,33.1-33.1,87.3,0,120.4l0,0 c33.1,33.1,87.3,33.1,120.4,0L500,620.4l177.4,177.4c33.1,33.1,87.3,33.1,120.4,0l0,0c33.1-33.1,33.1-87.3,0-120.4L620.4,500z' fill='currentColor'%3E%3C/path%3E%3C/svg%3E");
     background-color: var(--crossmark-color);
 }
 
-.arrow-svg {
+.arrow__svg-left {
     transform: rotateY(180deg);
 }
 
-.pricing__arrow {
-    height: 32px;
-    width: 32px;
+.pricing__arrow-left {
+    left: 50px;
+    top: calc(50% - 412px);
+}
+
+.pricing__arrow-right {
+right: 50px;
+top: calc(50% - 412px);
+}
+
+.pricing__arrow-left,
+.pricing__arrow-right {
+    height: 24px;
+    width: 24px;
     border-radius: 50%;
     fill: var(--svg-arrow-color);
     background-color: var(--svg-bg-color);
     margin-top: 170px;
+    padding: 5px;
+    position: absolute;
 }
 
 .pricing__details {
@@ -172,7 +189,8 @@ ul li {
 
 .pricing__details-card {
     background-color: var(--details-card-bg-color);
-    border: 1px solid black; /*later border none*/
+    border: 1px solid black;
+    /*later border none*/
     padding: 31px;
     box-sizing: border-box;
     line-height: normal;
@@ -189,7 +207,7 @@ ul li {
     background-color: var(--bn-select-color);
     border: 1px solid var(--bn-select-color);
     border-radius: 5px;
-    font-size: 0.675rem;   
+    font-size: 0.675rem;
     font-family: "Poppins", sans-serif;
     color: var(--button-text-color);
     text-decoration: none;
@@ -206,7 +224,7 @@ ul li {
 .pricing__select-bn-content {
     padding-right: 20px;
 }
-/* big screen
+
 .pricing__select-plan:hover {
     background-color: var(--select-hover-color);
     border-color: var(--select-hover-color);
@@ -215,4 +233,3 @@ ul li {
 .pricing__arrow:hover {
     background-color: var(--svg-bn-hover);
 }
-*/
