--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import "contacts.css";
 @import "care.css";
 @import "car.with.animal.css";
+@import "banner.css";
 * {
   padding: 0;
   margin: 0;
