--- a/css/style.scss
+++ b/css/style.scss
@@ -10,4 +10,5 @@
 @import "contacts.css";
 @import "care.css";
 @import "car.with.animal.css";
+@import "banner.css";
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
