added import into style.css

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import "service-carousel.css";
 @import "pricing.css";
 @import "faq.css";
+@import "partners-carousel.css";
 @import "contacts.css";
 @import "care.css";
 @import "car.with.animal.css";
