added improt to style.scss

--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,7 @@
 @import "./footer.scss";
 @import "pricing.css";
 @import "faq.css";
+@import "partners-carousel.css";
 @import "contacts.css";
 @import "care.css";
 @import "car.with.animal.css";
