--- a/css/discoveries.scss
+++ b/css/discoveries.scss
@@ -36,7 +36,7 @@
       background-size: contain;
       background-repeat: no-repeat;
       width: 100%;
-      height: auto;
+      height: 100%;
     }
 
     .discoveries__brain-img--first {
